updated pointer to correctly wrap around

--- a/app/sass/inc/_search-recipes.scss
+++ b/app/sass/inc/_search-recipes.scss
@@ -1,11 +1,15 @@
-.glysize{
+.glysize {
   font-size: 10em;
   position: relative;
 
 }
 
-.txtpointer{
+.txtpointer {
   font-size: 5em;
   position: relative;
 
+}
+
+.type-here-container > * {
+  display: inline-block;
 }
